lab1/Test/L1-A-7-56.cmm
struct {
  float pAYybcky0a8jkW [ 1386944321 ] , NwbjRmb9m 
    = imZJOrZzY0Kvl = nvLwlfORPmdomxCLA && tCbVGK >= yLPfzEf67PG 
    * ! - G ( wzEwQPH6662 , v8H53pyjgpT1 || QA85 < jnRb5KMj7NP__HaP 
    - x5uzfpv / - - p [ aindGOIlMFN <= UBScYKkUWcPft_tq0SX 
    * ( FeoCW4Ew9fO || I / ( U1yjxbNnSLgBldCl || Pti > 
    OFY0dSg8 + ( V != vWkASM7mphqEK * ( mmbk2Cd == yvc3S 
    ) ) * v7a ) * 334442661 \) + - WZHYRWQk5SMfyBNKTs 
    . DuSaxIX ] . o / 1078253347.1948030319 + m4sVsFPDQi 
    ( ) ) ;
};
int ;
int DXq0hPMqlKOmvuMajUtA ( int MPOr3105z5HvG , int 
  cwZ0bP ) {
  sQFYn ;
  JQHjvKH ;
  b6Wek5KEFhLty ;
  if ( CIfI7Yxsc )   if ( NmLedFfRA )   while ( y 
    )   EnK ;

else {
  }#
else   if ( uKLuN0EdH )   return jh0Z1TEt0Jtcqtnkw8XF 
    ;


}
int EgTeAli0fILPpvL , m88woNFaWJD 

;
struct {
  int MIvj ;
  struct Vb4ApAavrjgLAv_A6SG4 {
  }wa57 ;
  int ZHBxV1G_ueo_F ;
  int HN6KdTkoxdRtH &;
};
struct m0 ~FpPij6sSddrP9zPB ( ) {
}
^int kYML5iaEqA3jSz 
;
